--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "rollup": "^4.19.0",
     "rollup-plugin-delete": "^2.0.0",
     "tailwindcss": "^3.4.7",
