整体路由调整

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,7 +14,8 @@ files:
   - "!nodemon.json"
   - "!rollup.config.js"
   - "!.rollup.cache"
-asar: false
+asar: true
+
 asarUnpack:
   - resources/*
 # afterSign: build/notarize.js
