--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -27,11 +28,13 @@
     "antd": "^5.19.4",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "echarts": "^5.5.1",
     "electron": "^31.3.0",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "lodash-es": "^4.17.21",
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
