--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.40",
@@ -45,6 +46,7 @@
     "tailwindcss": "^3.4.7",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
+    "use-immer": "^0.10.0",
     "vite": "^5.3.4"
   },
   "dependencies": {
