--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -26,6 +26,6 @@
       "@/*": ["./src/*"],
     }
   },
-  "include": ["src", "../preload.d.ts", "./src/vite-env.d.ts"],
+  "include": ["src", "../preload.d.ts", "./src/vite-env.d.ts", "./global.d.ts"],
   
 }
