--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -47,7 +48,8 @@
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "use-immer": "^0.10.0",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "ws": "^8.18.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5"
