useListenMainEvent 创建，用于监听主进程的消息事件hook

--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -24,7 +24,8 @@
     "noFallthroughCasesInSwitch": true,
     "paths": {
       "@/*": ["./src/*"],
-    }
+    },
+    "noImplicitAny": false
   },
   "include": ["src", "../preload.d.ts", "./src/vite-env.d.ts", "./global.d.ts"],
   
