--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "rollup": "^4.19.0",
