--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "build:renderer": "cd src/renderer && vite build",
     "build:main": "rollup -c rollup.config.js",
     "package:win": "run-s build:* && electron-builder -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:server": "cd server && nodemon index.ts"
+
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.12",
