--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -7,11 +7,12 @@
     /* Language and Environment */
     // "target": "es2016", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     /* Modules */
-    "module": "commonjs", /* Specify what module code is generated. */
+    "module": "ESNext", /* Specify what module code is generated. */
     /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [], /* Specify type package names to be included without being referenced in a source file. */
     "outDir": "../../dist/main", /* Specify an output folder for all emitted files. */
+    // "outFile": "./dist/test.cjs",
     "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
     /* Type Checking */
