--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "package:win": "run-s build:* && electron-builder -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:server": "cd server && nodemon index.ts"
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -39,6 +40,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "fluent-ffmpeg": "^2.1.3",
+    "flv.js": "^1.6.2",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "npm-run-all2": "^6.2.2",
@@ -53,7 +56,9 @@
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "use-immer": "^0.10.0",
+    "video.js": "^8.17.2",
     "vite": "^5.3.4",
+    "websocket-stream": "^5.5.2",
     "ws": "^8.18.0"
   },
   "dependencies": {
