--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "flv.js": "^1.6.2",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
+    "mpegts.js": "^1.7.3",
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
