--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "main": "./dist/main/main.cjs",
   "scripts": {
-    "dev": "run-p dev:renderer dev:main",
+    "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\" --kill-others-on-fail",
     "dev:main": "nodemon",
-    "dev:renderer": "cd src/renderer && vite",
+    "dev:renderer": "cd ./src/renderer && vite",
     "run:main": "electron .",
     "build:renderer": "cd src/renderer && vite build",
     "build:main": "rollup -c rollup.config.js",
     "package:win": "run-s build:* && electron-builder -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:server": "cd server && nodemon index.ts"
+    "dev:server": "cd server && nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +32,7 @@
     "antd": "^5.19.4",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "concurrently": "^8.2.2",
     "echarts": "^5.5.1",
     "electron": "^31.3.0",
     "electron-builder": "^24.13.3",
@@ -56,11 +57,11 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "ws": "^8.18.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
-    "websocket-stream": "^5.5.2"
+    "websocket-stream": "^5.5.2",
+    "ws": "^8.18.0"
   }
 }
