--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "./dist/main/main.cjs",
+  "main": "./dist/main/index.cjs",
   "scripts": {
     "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\" --kill-others-on-fail",
     "dev:main": "nodemon",
     "dev:renderer": "cd ./src/renderer && vite",
     "run:main": "electron .",
     "build:renderer": "cd src/renderer && vite build",
-    "build:main": "rollup -c rollup.config.js",
+    "build:main": "node esbuild.config.cjs",
+    "build:main1": "rollup -c rollup.config.js",
     "package:win": "run-s build:* && electron-builder -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "cd server && nodemon index.ts"
@@ -18,9 +19,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
@@ -34,8 +32,9 @@
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "echarts": "^5.5.1",
-    "electron": "^31.3.0",
+    "electron": "^31.4.0",
     "electron-builder": "^24.13.3",
+    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
@@ -48,8 +47,6 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "rollup": "^4.19.0",
-    "rollup-plugin-delete": "^2.0.0",
     "tailwindcss": "^3.4.7",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
