--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "mpegts.js": "^1.7.3",
+    "nodemon": "^3.1.4",
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
