--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,15 +5,16 @@ directories:
   output: out
 files:
   - '!**/.vscode/*'
-  - '!src/*'
+  # - '!src/*'
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
   - '!src/renderer/*'
-  - '!src/main/*'
+  # - '!src/main/*'
   - "!nodemon.json"
   - "!rollup.config.js"
   - "!.rollup.cache"
+  - "!server/*"
 asar: true
 
 asarUnpack:
