--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-electron-template",
+  "name": "freq-config",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -11,14 +11,15 @@
     "dev:renderer": "cd ./src/renderer && vite",
     "run:main": "electron .",
     "build:renderer": "cd src/renderer && vite build",
-    "build:main": "node esbuild.config.cjs",
-    "package:win": "run-s build:* && electron-builder -w",
+    "build:main": "rollup -c rollup.config.js",
+    "package": "run-s build:* && electron-builder -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "cd server && nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
@@ -34,7 +35,6 @@
     "echarts": "^5.5.1",
     "electron": "^31.4.0",
     "electron-builder": "^24.13.3",
-    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
@@ -48,6 +48,8 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "rollup": "^4.19.0",
+    "rollup-plugin-delete": "^2.0.0",
     "tailwindcss": "^3.4.7",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
